<resources>
    <string name="lib_name">JiRin</string>
    <string name="badge_notification_title">Application notification</string>
    <string name="badge_notification_empty">No notice</string>
    <string name="badge_notification_content">You have %d unread notice</string>
    <string name="badge_notification_contents">You have %d unread notices</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="tips_auto_click_service_unable"> AutoClick Service Unable</string>
    <string name="auto_click">Auto Click</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_ensure">OK</string>
    <string name="text_dialog_title">System Tips</string>
    <string name="dialog_default_message">unknown</string>
    <string name="text_dialog_message">System Message</string>
</resources>