<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="320dp"
    android:layout_height="165dp"
    android:layout_gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/nor_dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_dialog_title"
        android:gravity="center"
        android:paddingTop="@dimen/custom_nor_dialog_vertical_title_padding"
        android:paddingBottom="@dimen/custom_nor_dialog_vertical_title_padding"
        android:textSize="@dimen/custom_nor_dialog_title_text_size"
        android:textColor="@color/settings_text_color"
        android:background="@color/normal_dialog_title_bg_color">
    </TextView>

    <TextView
        android:id="@+id/nor_dialog_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_dialog_message"
        android:gravity="center"
        android:textSize="@dimen/custom_nor_dialog_message_text_size"
        android:paddingTop="@dimen/custom_nor_dialog_vertical_message_padding"
        android:paddingBottom="@dimen/custom_nor_dialog_vertical_message_padding"
        android:textColor="@color/settings_text_color">
    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/nor_dialog_cancel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/custom_nor_dialog_horizontal_margin"
            android:layout_marginRight="@dimen/custom_nor_dialog_horizontal_margin"
            android:layout_marginBottom="@dimen/custom_nor_dialog_vertical_btn_margin"
            android:layout_height="match_parent"
            android:textColor="@drawable/setting_btn_text_color_selector"
            android:background="@drawable/dialog_btn_bg_selector"
            android:text="@string/text_cancel"
            android:textSize="@dimen/dialog_button_text_size"
            android:gravity="center">
        </TextView>

        <TextView
            android:id="@+id/nor_dialog_ensure"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/custom_nor_dialog_horizontal_margin"
            android:layout_marginRight="@dimen/custom_nor_dialog_horizontal_margin"
            android:layout_marginBottom="@dimen/custom_nor_dialog_vertical_btn_margin"
            android:background="@drawable/dialog_btn_bg_selector"
            android:text="@string/text_ensure"
            android:gravity="center"
            android:textSize="@dimen/dialog_button_text_size"
            android:textColor="@drawable/setting_btn_text_color_selector"
            android:layout_height="match_parent">
        </TextView>

    </LinearLayout>

</LinearLayout>