<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="320dp"
    android:layout_height="165dp"
    android:layout_gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/edit_dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_dialog_title"
        android:gravity="center"
        android:paddingTop="@dimen/custom_nor_dialog_vertical_title_padding"
        android:paddingBottom="@dimen/custom_nor_dialog_vertical_title_padding"
        android:textSize="@dimen/custom_nor_dialog_title_text_size"
        android:textColor="@color/settings_text_color"
        android:background="@color/normal_dialog_title_bg_color">
    </TextView>

    <EditText
        android:id="@+id/edit_dialog_value_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_default_message"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@mipmap/input_box"
        android:inputType="number"
        android:digits="0123456789"
        android:textSize="14sp"
        android:textColor="@color/settings_text_color">
    </EditText>

    <EditText
        android:id="@+id/edit_dialog_value_nor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_default_message"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@mipmap/input_box"
        android:inputType="text"
        android:textSize="14sp"
        android:visibility="gone"
        android:textColor="@color/settings_text_color">
    </EditText>

    <LinearLayout
        android:id="@+id/ll_dialog_value_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@mipmap/input_box"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:visibility="gone">

        <EditText
            android:id="@+id/edit_dialog_value_password"
            android:layout_width="0dp"
            android:layout_weight="6"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:inputType="textPassword"
            android:digits="0123456789qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM`-=[]\;,./~!@#$%^*()_+}{:?&amp;&lt;&gt;&quot;&apos;"
            android:textSize="14sp"
            android:background="@null"
            android:textColor="@color/settings_text_color">
        </EditText>

        <ImageView
            android:id="@+id/iv_pwdshow"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:src="@mipmap/icon_eye_close"
            android:scaleType="fitCenter"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:focusable="true"
            android:clickable="true"/>
    </LinearLayout>

    <EditText
        android:id="@+id/edit_dialog_value_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@mipmap/input_box"
        android:numeric="integer"
        android:digits=",，0123456789"
        android:textSize="14sp"
        android:visibility="gone"
        android:textColor="@color/settings_text_color">
    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/edit_dialog_cancel"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/custom_nor_dialog_horizontal_margin"
            android:layout_marginRight="@dimen/custom_nor_dialog_horizontal_margin"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_height="match_parent"
            android:textColor="@drawable/setting_btn_text_color_selector"
            android:background="@drawable/dialog_btn_bg_selector"
            android:text="@string/text_cancel"
            android:textSize="@dimen/dialog_button_text_size"
            android:gravity="center">
        </TextView>

        <TextView
            android:id="@+id/edit_dialog_ensure"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/custom_nor_dialog_horizontal_margin"
            android:layout_marginRight="@dimen/custom_nor_dialog_horizontal_margin"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/dialog_btn_bg_selector"
            android:text="@string/text_ensure"
            android:gravity="center"
            android:textSize="@dimen/dialog_button_text_size"
            android:textColor="@drawable/setting_btn_text_color_selector"
            android:layout_height="match_parent">
        </TextView>

    </LinearLayout>

</LinearLayout>